Fix title text align when it is shorter than subtitle

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -301,6 +301,10 @@ hr {
 	z-index: 100000;
 }
 
+#home-title {
+  display: block;
+}
+
 // #home-center {
 //   display: flex;
 //   flex-grow: 1;
@@ -308,10 +312,6 @@ hr {
 //   justify-content: center;
 // }
 //
-// #home-title {
-//   margin: 0;
-//   text-align: center;
-// }
 //
 // #home-subtitle {
 //   margin-top: 0;
